# SNB_Benchmark_Processing

Benchmark_For_PG+reification/HOGDB_Neo4j/: pyproject.toml
Benchmark_For_PG+reification/HOGDB_Neo4j/HOGDB/: .env
Benchmark_For_PG+reification/HOGDB_Neo4j/HOGDB/graph/: edge.py  hyperedge.py  node.py  node_tuple.py  subgraph.py
Benchmark_For_PG+reification/RPG_CozoDB/: Add_abstraction_levels.ipynb  Add_reified_edges.ipynb  Add_reified_nodes.ipynb  Query_Cozo.py  import_to_cozo.py
Benchmark_For_Simple_PG/: queries.txt
Benchmark_For_Simple_PG/PG_CozoDB/: README.md  README.txt  run_import_pipeline.bat
Benchmark_For_Simple_PG/PG_CozoDB/scripts/: Query_Cozo.py  chunk_util.py  csv_to_json_edges.py  csv_to_json_nodes.py  csv_to_json_props.py  import_to_cozo.py
Benchmark_For_Simple_PG/PG_Neo4j/: README.txt  automated_import_fromSNB_to_Neo4j.ps1
